Further modularize the API
* Guava 30.1 - potentially breaking for plugins which use Guava
* Moved timings implementation classes to co.aikar.timings.internal
  to permit solarpaper-server to use SafeTimings.ofSafe without
  needing split packages
* Add missing 'export' declarations in API module-info
* Upgrade to Gson 2.8.6 which has module-info
* Migrate away from jsr305 which is problematic for many reasons;
  use checker-qual which is becoming the standard.
* Remove authlib from the API since it wasn't needed anyway
* Switch to modularized bungeechat (though adventure is better and
  may be added at a later time)