@@ -13,23 +13,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.sf.trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.3</version>
-			<!-- Trove Provided by CraftBukkit -->
-			<scope>provided</scope>
-		</dependency>
-		<!-- Paper - Add Authlib for Profile API -->
-		<dependency>
-			<groupId>com.mojang</groupId>
-			<artifactId>authlib</artifactId>
-			<version>1.5.25</version> <!-- keep in sync with major MC versions -->
-		</dependency>
-		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
 			<version>8.4.4</version>
 		</dependency>
+		<!-- TODO: Remove the next 2 dependencies -->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -42,25 +30,28 @@
 			<version>1.1.1</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- bundled with Minecraft, shouldn't ever change -->
+		<!-- -->
 		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>jsr305</artifactId>
-			<version>1.3.9</version>
-			<scope>compile</scope>
+			<groupId>org.checkerframework</groupId>
+			<artifactId>checker-qual</artifactId>
+			<version>3.10.0</version>
 		</dependency>
-		<!-- bundled with Minecraft, should be kept in sync -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>21.0</version>
+			<version>30.1-jre</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.findbugs</groupId>
+					<artifactId>jsr305</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<!-- bundled with Minecraft, should be kept in sync -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
+			<version>2.8.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
@@ -70,7 +61,7 @@
 		<dependency>
 			<groupId>gg.solarmc</groupId>
 			<artifactId>bungeecord-chat</artifactId>
-			<version>1.12-SNAPSHOT</version>
+			<version>0.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -83,6 +74,12 @@
 			<version>${dataloader.version}</version>
 		</dependency>
 		<!-- Testing -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -126,6 +123,14 @@
                          <version>2.8.2-spigotmc</version>
                      </dependency>
                  </dependencies> -->
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<trimStackTrace>false</trimStackTrace>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
